--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
+  "noImplicitAny": false, //Моя касточная настройка
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
@@ -16,10 +17,12 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
+    "strictNullChecks": false, //после этого пропала ошибка TS2531: Object is possibly 'null'
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "strictPropertyInitialization": false, //Моя касточная настройка
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
